fix: double scroll

--- a/src/app/pages/reservation-page/reservation-page.component.scss
+++ b/src/app/pages/reservation-page/reservation-page.component.scss
@@ -7,8 +7,8 @@
 .calendar {
   flex: 1;
   max-height: var(--calendar-height);
-  overflow-y: auto;
   touch-action: pan-y !important;
+  overflow: hidden;
 }
 
 .calendar-header {
